cabal-version:      2.4
name:               binance-api
version:            0.1.2.0

-- vim: set expandtab:

synopsis: read-only incomplete Haskell bindings for the Binance API

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
bug-reports: https://github.com/llenck/binance-api/issues

-- The license under which the package is released.
-- license:
author:             Lia Lenckowski
maintainer:         lialenck@protonmail.com

extra-source-files: LICENSE.agpl

library
    build-depends:
        base ^>= 4.15.1.0
        , bytestring
        , aeson
        , cryptonite
        , http-conduit
        , time
        , unordered-containers
    hs-source-dirs: src
    default-language: Haskell2010
    exposed-modules:
        Binance.Api

    other-modules:
        Binance.Network
